@@ -14,6 +14,10 @@ package com.dragontalker.java;
  *
  *  3. 手动设置: -Xms600m -Xmx600m
  *      开发中建议将初始堆内存和最大的堆内存设置成相同的值
+ *
+ *  4. 查看设置的参数:
+ *      - 方式一: jsp -> jstat -gc 进程id
+ *      - 方式二: -XX:+PrintGCDetails
  */
 public class HeapSpaceInitial {
     public static void main(String[] args) {
